# spotify-to-ytmusic

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PACKAGING.md  README.md
.claude/: resolve-issue.sh  workflow-issue.md
.claude/commands/: resolve-issue.md
.github/workflows/: backend-tests.yml  build-sidecar.yml  frontend-ci.yml  release.yml
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt  setup_ytmusic.py  spotify-to-ytmusic-server.spec
backend/scripts/: build_sidecar.py
backend/src/spotify_to_ytmusic/: __init__.py
backend/src/spotify_to_ytmusic/api/: __init__.py  dependencies.py  jobs.py  models.py  serialization.py  server.py  sidecar_server.py  state.py
backend/src/spotify_to_ytmusic/api/routes/: auth.py  health.py  library.py  migrate.py  reports.py
backend/src/spotify_to_ytmusic/cli/: __init__.py
backend/src/spotify_to_ytmusic/core/: config.py  events.py  headers_parser.py  migrator.py  models.py  report.py  spotify_client.py  text.py  track_cache.py  ytmusic_client.py
backend/tests/: conftest.py  test_migrator.py  test_report.py  test_spotify_client.py  test_track_cache.py  test_ytmusic_client.py
backend/tests/api/: test_auth.py  test_health.py  test_library.py  test_migrate.py  test_reports.py  test_serialization.py  test_sidecar_server.py
backend/tests/fixtures/: current_user_playlists.json  current_user_saved_albums.json  playlist_tracks_legacy.json  playlist_tracks_new.json
docs/: oauth-desktop.md
frontend/: .env.development  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: job.rs  lib.rs  main.rs
frontend/src/components/: index.ts
frontend/src/contexts/: AppSectionContext.tsx  AppSectionContextValue.ts  SelectionContext.test.tsx  SelectionContext.tsx  SelectionContextValue.ts  SelectionPersistence.test.tsx  useSelectionContext.ts
frontend/src/features/: index.ts
frontend/src/hooks/: useAppSection.test.ts  useAppSection.ts  useAutoFocusHeading.test.tsx  useAutoFocusHeading.ts  useFocusTrap.test.tsx  useFocusTrap.ts  useMigrationEvents.test.tsx  useMigrationEvents.ts  useMigrationState.ts
frontend/src/lib/: ToastContext.tsx  ToastContextValue.ts  download.test.ts  download.ts  http.test.ts  http.ts  tauri.ts  toast.tsx  (+2 more)
scripts/: generate-updater-keypair.sh
(+88 files in other folders)
