[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-to-ytmusic"
version = "0.2.0"
description = "Migrate your Spotify library to YouTube Music"
requires-python = ">=3.10"
dependencies = [
    "spotipy>=2.23.0",
    "ytmusicapi>=1.7.0",
    "python-dotenv>=1.0.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12",
]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
spotify-to-ytmusic = "spotify_to_ytmusic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
